--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <div>VIG!!</div>
     
-  <script src="script.js"></script>
+  <script src="https://karug187.github.io/Project-VIG/script.js"></script>
 
 </body>
 
