--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width"/>
   <title>VIG</title>
+  <link rel="stylesheet" href="https://karug187.github.io/Project-VIG/style.css">
 </head>
 
 <body>
 
   <div>VIG!!</div>
+  
+  <video id="video" autoplay playsinline></video>
     
   <script src="https://karug187.github.io/Project-VIG/script.js"></script>
 
