--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 
 <body>
 
-  <div>VIG!!</div>
+  <div>VIG</div>
   
-  <video id="video" autoplay playsinline></video>
+  <video id="camera" width="300" height="200"></video>
+  <canvas id="picture" width="300" height="200"></canvas>
+  
+  <button type="button" id="shutter">シャッター</button>
     
   <script src="https://karug187.github.io/Project-VIG/script.js"></script>
 
