--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
   <canvas id="picture" width="300" height="200"></canvas>
   
   <button type="button" id="shutter">シャッター</button>
+  
+  <audio id="se" preload="auto">
+    <source src="camera-shutter1.mp3" type="audio/mp3">
+  </audio>
     
   <script src="https://karug187.github.io/Project-VIG/script.js"></script>
 
