--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <button type="button" id="shutter">シャッター</button>
   
   <audio id="se" preload="auto">
-    <source src="camera-shutter1.mp3" type="audio/mp3">
+    <source src="https://karug187.github.io/Project-VIG/test (無機質).wav" type="audio/mp3">
   </audio>
     
   <script src="https://karug187.github.io/Project-VIG/script.js"></script>
