--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-  <div>VIGVIG</div>
+  <div>VIG</div>
   
   <video id="camera" width="300" height="200"></video>
   <canvas id="picture" width="300" height="200"></canvas>
